--- a/views/pages/indexTram.ejs
+++ b/views/pages/indexTram.ejs
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>AirQuality</title>
+    <title>TramSecurity</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato|Pontano+Sans|Arsenal|Dosis|Michroma" rel="stylesheet">
-  <link href="../../css/air_quality.css" rel="stylesheet">
+  <link href="../../css/tram_security.css" rel="stylesheet">
   <script type="text/javascript" src="../../javascript/rainbow.js"></script>
 	<script src="https://js.pusher.com/3.2/pusher.min.js"></script>
   </head>
