--- a/views/pages/indexTram2.ejs
+++ b/views/pages/indexTram2.ejs
@@ -50,13 +50,13 @@
     // Create the map.
     map = new google.maps.Map(document.getElementById('map'), {
       zoom: 18,
-      center: {lat: 47.377177, lng: 8.547142},
-      mapTypeId: google.maps.MapTypeId.SATELLITE,
+      center: {lat: 47.377181, lng: 8.547656},
+      mapTypeId: google.maps.MapTypeId.HYBRID,
       zoomControl: true,
       scaleControl: false,
 	  
       mapTypeControlOptions: {
-        mapTypeIds: [google.maps.MapTypeId.SATELLITE]
+        mapTypeIds: [google.maps.MapTypeId.HYBRID]
       },
       disableDefaultUI: true,
       // How you would like to style the map. 
