--- a/views/pages/indexTram2.ejs
+++ b/views/pages/indexTram2.ejs
@@ -10,7 +10,7 @@
 	<script src="https://js.pusher.com/3.2/pusher.min.js"></script>
   </head>
   <body>
-    <div id ="texte"><font>ZRH</FONT> <b>TRAM SECURITY</b> </div><div id="texte2" class="rechts">Instructions&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Contact</div>
+    <div id ="texte"><font>ZRH</FONT> <b>TRAM SECURITY</b> </div><div id="texte2" class="rechts">Wie funktioniert es?&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Team</div>
     <div id ="texte3"></div>
     <div id ="logo"></div>
     <div id="map"></div>
