--- a/views/pages/personsandobjectsmoving.ejs
+++ b/views/pages/personsandobjectsmoving.ejs
@@ -3,6 +3,6 @@
     <head>
     </head>
     <body>
-        People are moving and the tram as well!
+        People are moving or the trams. Data was sent!
     </body>
 </html>
